# MPL-RUSTBOOTCAMP-internship

./: .gitignore  README.md
.marscode/: deviceInfo.json
weekone/: Cargo.toml  README.md
weekone/src/: main.rs  worktwo.rs
weekthree/: Cargo.toml  Dockerfile  README.md  fly.toml
weekthree/.sqlx/: query-8bc5cc0d45bc734876fa4f16c85c3cb915f49cc23d0eee76c3440a57ac88d853.json  query-952ae0779551714b5e33adbb6f91ff289a82bd8d6882573c9061c730ee7af96c.json  query-a39e21457b61371ad36517d02603f4a03f7c2f8db38aa4d3017a828c954af621.json  query-ede25d2d08b2c3615c8ce71cfd6ab700ba81ff5b09e8b5caceea79d08ccaf80e.json
weekthree/src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs
weektwo/: Cargo.toml
weektwo/src/: main.rs
