[package]
name = "basi_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
handlebars = { version = "4.3.5", features = ["dir_source"] }
r2d2 = "0.8.10"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.89"
actix-multipart = "0.6"
futures-util = "0.3"
tokio = { version = "1", features = ["fs"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
